--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,15 @@
 	<artifactId>statki</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>statki</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Statki</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
@@ -41,6 +45,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!--https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
 		<dependency>
 			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-core</artifactId>
@@ -51,8 +56,16 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.23</version> <!-- Lub najnowsza dostępna wersja -->
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>5.3.0</version> <!-- Wybierz odpowiednią wersję Bootstrapa -->
+		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
