--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/projekt_statki?useSSL=false
-spring.datasource.username=Kuba
-spring.datasource.password=root
+spring.datasource.username=admin
+spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.security.user.passwordEncoder=bcrypt
@@ -11,3 +11,4 @@ jwt.expiration=${JWT_EXPIRATION:3600000}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+admin.emails=admin@example.com
