--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,17 @@
             <artifactId>spring-web</artifactId>
             <version>6.0.13</version>
         </dependency>
-    </dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>6.0.13</version>
+        </dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
+
+	</dependencies>
 
 	<build>
 		<plugins>
