--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.10.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>6.0.14</version>
+		</dependency>
 
 	</dependencies>
 
