--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,10 @@
 			<artifactId>spring-tx</artifactId>
 			<version>6.0.14</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
